@@ -15,7 +15,8 @@ drcfit(itemselect, sigmoid.model = c("Hill", "log-probit"),
 
 \method{print}{drcfit}(x, \dots)
 
-\method{plot}{drcfit}(x, items, \dots)
+\method{plot}{drcfit}(x, items, 
+  plot.type = c("dose_fitted", "dose_residuals","fitted_residuals"), \dots)
 }
 
 \arguments{
@@ -42,6 +43,12 @@ choice) or \code{"log-probit"}.}
 \item{items}{Argument of the \code{plot.drcfit} function : the number of the first fits to
   plot (20 items max) or the character vector
   specifying the identifiers of the items to plot (20 items max).}
+  
+\item{plot.type}{the type of plot, by default \code{"dose_fitted"} for the plot of 
+ fitted curves with the observed points added to the plot and the observed means at each dose
+ added as black plain circles, \code{"dose_residuals"} for the plot of the residuals as function
+ of the dose, and \code{fitted_residuals} for the plot of the residuals as function of 
+ the fitted value.}
 
 \item{\dots}{ further arguments passed to graphical or print functions.}
 }
@@ -134,6 +141,14 @@ datatxt <- system.file("extdata", "transcripto_very_small_sample.txt", package="
 
 # Default plot
 plot(f)
+
+# Plot of residuals as function of the dose
+plot(f, plot.type = "dose_residuals")
+
+\donttest{
+# plot of residuals as function of the fitted value
+plot(f, plot.type = "fitted_residuals")
+}
 
 # (2) an example on a microarray data set (a subsample of a greater data set) 
 #
